@@ -1,3 +1,10 @@
+2005-10-07  Rodrigo Moya <rodrigo@novell.com>
+
+	Fixes #318231
+
+	* eggtrayicon.[ch]: updated to latest eggtrayicon code, to fix weird
+	spacing between icons.
+
 2005-08-18  Rodrigo Moya <rodrigo@novell.com>
 
 	* drw-break-window.c (drw_break_window_dispose): fixed leaked timer.
